--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/react-study-result/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="/react-study-result/logo192.png" />
-    <link rel="manifest" href="/react-study-result/manifest.json" />
-    <title>React App</title>
-    <script
-      defer="defer"
-      src="/react-study-result/static/js/main.a03c32c0.js"
-    ></script>
-    <link
-      href="/react-study-result/static/css/main.5a956939.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/react-study-result/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/react-study-result/logo192.png"/><link rel="manifest" href="/react-study-result/manifest.json"/><title>React App</title><script defer="defer" src="/react-study-result/static/js/main.a03c32c0.js"></script><link href="/react-study-result/static/css/main.5a956939.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
